# mq-bench

./: .gitignore  Cargo.toml  DESIGN.md  DOCKER_DESIGN.md  README.md  RUST_DESIGN.md  TASKS.md  cross_router_test.sh  debug_test.sh  docker-compose.yml  nohup.out  test_pubsub.sh
.github/: copilot-instructions.md
config/: emqx.conf  mosquitto.conf  nats.conf  rabbitmq.conf  router1.json5  router3.json5  toxiproxy.json
docs/: TRANSPORT_REFACTOR.md
example_results/benchmark_20250910_015218/: README.md
example_results/benchmark_20250910_073442/: README.md
final_results/: fanout_analysis.md
final_results/latency/: summary.csv
logs/: .gitignore
scripts/: backfill_utilization.py  compose_down.sh  compose_up.sh  lib.sh  orchestrate_benchmarks.sh  orchestrate_fanout.sh  orchestrate_fanout_sweep.sh  orchestrate_latency_vs_payload.sh  orchestrate_qos_comparison.sh  orchestrate_throughput_vs_pairs.sh  plot_fanout_sweep.py  plot_latency_bars.py  plot_qos_comparison.py  plot_results.py  run_amqp_baseline.sh  run_amqp_fanout.sh  run_artemis_baseline.sh  run_artemis_fanout.sh  run_baseline.sh  run_cluster_3r.sh  run_fanout.sh  run_local_baseline.sh  run_mqtt_baseline.sh  run_mqtt_baseline_emqx.sh  run_mqtt_baseline_hivemq.sh  run_mqtt_fanout.sh  run_mqtt_queries.sh  run_multi_topic_fanout.sh  run_multi_topic_perkey.sh  run_nats_baseline.sh  run_nats_fanout.sh  run_queries.sh  run_rabbitmq_baseline.sh  run_rabbitmq_fanout.sh  run_redis_baseline.sh  run_redis_fanout.sh  run_redis_queries.sh  run_zenoh_baseline.sh  sweep_mqtt_brokers_failure.sh  sweep_mqtt_network_failure.sh  (+3 more)
setup/: install-docker.sh
src/: config.rs  crash.rs  lib.rs  logging.rs  main.rs  output.rs  payload.rs  rate.rs  time_sync.rs
src/metrics/: mod.rs  prometheus.rs  stats.rs
src/roles/: mod.rs  multi_query.rs  multi_topic.rs  publisher.rs  queryable.rs  reliable_publisher.rs  requester.rs  subscriber.rs
src/transport/: amqp.rs  config.rs  mock.rs  mod.rs  mqtt.rs  nats.rs  redis.rs  zenoh.rs
src/wire/: mod.rs
temp/: docker-compose.yml
tests/: mock_transport_smoke.rs
(+22 files in other folders)
