[package]
name = "mq-bench"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
clap = { version = "4.0", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
hdrhistogram = "7.0"
csv = "1.1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
futures = "0.3"
flume = "0.11"
bytes = "1"
thiserror = "2"
async-trait = "0.1"
uuid = { version = "1", features = ["v4"] }

[features]
default = ["transport-mock", "transport-zenoh", "transport-redis", "transport-mqtt"]
transport-zenoh = ["dep:zenoh"]
transport-redis = ["dep:redis"]
transport-mock = []
transport-mqtt = ["dep:rumqttc"]

[dependencies.zenoh]
version = "1.5.1"
optional = true
[dependencies.redis]
version = "0.32"
optional = true
features = ["tokio-comp", "connection-manager"]

[dependencies.rumqttc]
version = "0.24"
optional = true

[profile.release]
lto = true
codegen-units = 1